force-app/main/default/objects/Case/fields/Agent_First_Response_At__c.field-meta.xml
<CustomField>
    <fullName>Agent_First_Response_At__c</fullName>
    <label>Agent First Response At</label>
    <description>상담사가 고객에게 처음으로 응답한 시각. AI 자동응답(봇)과 구분하여 실제 사람이 개입한 시점을 기록한다.</description>
    <inlineHelpText>상담사가 직접 고객에게 첫 메시지를 보낸 시각을 입력하세요. 봇 응답 시각과 혼동하지 마세요.</inlineHelpText>
    <type>DateTime</type>
</CustomField>