force-app/main/default/objects/Case/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>보증 판정 결과 유상 처리 대상인지 여부. 보증 미적용일 때 유상으로 표시된다.</description>
    <inlineHelpText>보증이 적용되지 않아 유상 처리되는 Case이면 체크됩니다.</inlineHelpText>
    <label>유상 여부</label>
    <type>Checkbox</type>
</CustomField>