force-app/main/default/objects/Case/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>보증 범위 유형</label>
    <description>접수 시점에 판정된 Asset의 보증 유형 스냅샷. Asset.Warranty_Type__c에서 접수 시점 값을 복사해 고정한다.</description>
    <inlineHelpText>접수 시점 장비의 보증 유형입니다. 기본보증/연장보증/AMC/무보증 중 하나로 자동 기록됩니다.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>기본보증</fullName>
            </value>
            <value>
                <fullName>연장보증</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>무보증</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>