force-app/main/default/objects/Case/fields/Diagnosed_Cause__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_Cause__c</fullName>
    <description>원격 진단 결과 확정한 장애 원인. 현장 방문 여부 판단과 복구 조치의 근거가 된다.</description>
    <inlineHelpText>원격 진단으로 파악한 장애 원인을 기록하세요. 근거가 부족하면 현장 방문 필요로 표시합니다.</inlineHelpText>
    <label>진단 원인</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>