force-app/main/default/objects/Case/fields/Field_Visit_Required__c.field-meta.xml
<CustomField>
    <fullName>Field_Visit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>원격 진단만으로 원인 규명·복구가 어려워 현장 방문이 필요한지 여부. 복구 Work Order 발행(T4-11)의 트리거 조건으로 사용된다.</description>
    <inlineHelpText>원격 진단으로 해결이 불가능해 현장 출동이 필요하면 체크하세요.</inlineHelpText>
    <label>현장 방문 필요</label>
    <type>Checkbox</type>
</CustomField>