force-app/main/default/objects/Case/fields/Impact_Level__c.field-meta.xml
<CustomField>
    <fullName>Impact_Level__c</fullName>
    <description>장애의 파급 범위와 조치 시급성을 등급화해 SLA Entitlement 프로세스 자동 할당과 우선순위 판단의 기준으로 사용한다.</description>
    <inlineHelpText>장애 파급 범위와 시급성에 따라 S1(긴급)~S4(요청) 중 하나를 선택하세요.</inlineHelpText>
    <label>영향 등급</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S1 긴급</fullName>
            </value>
            <value>
                <fullName>S2 중요</fullName>
            </value>
            <value>
                <fullName>S3 일반</fullName>
            </value>
            <value>
                <fullName>S4 요청</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>