force-app/main/default/objects/Case/fields/Priority_Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Priority_Approved_At__c</fullName>
    <label>Priority Approved At</label>
    <description>케이스 우선순위가 승인된 시각. Priority_Approved_By__c 와 쌍으로 기록되어 승인 이력을 추적한다.</description>
    <inlineHelpText>우선순위 승인이 완료된 날짜 및 시각입니다. 자동으로 기록됩니다.</inlineHelpText>
    <type>DateTime</type>
</CustomField>