force-app/main/default/objects/Case/fields/Priority_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Priority_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>케이스 우선순위를 최종 승인한 사용자. Priority 변경이 시스템 자동이 아닌 책임자 결정임을 증명하는 감사 필드.</description>
    <inlineHelpText>우선순위를 승인한 담당자가 자동으로 기록됩니다. 수동 변경 시 필수 입력입니다.</inlineHelpText>
    <label>우선순위 승인자</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>우선순위 승인 케이스</relationshipLabel>
    <relationshipName>Priority_Approved_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>