force-app/main/default/objects/Case/fields/Priority_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Priority_Override_Reason__c</fullName>
    <label>Priority Override Reason</label>
    <description>우선순위를 기본값에서 변경할 때 담당자가 입력하는 변경 사유. 감사 추적 및 SLA 예외처리 근거로 활용된다.</description>
    <inlineHelpText>Priority를 기본값에서 바꿀 경우 변경 이유를 반드시 입력하세요 (예: 고객 VIP 요청, 생산 라인 중단 위험).</inlineHelpText>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>