force-app/main/default/objects/Case/fields/Problem__c.field-meta.xml
<CustomField>
    <fullName>Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem</label>
    <referenceTo>Problem</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>