force-app/main/default/objects/Case/fields/Reported_Symptom__c.field-meta.xml
<CustomField>
    <fullName>Reported_Symptom__c</fullName>
    <label>고객 진술 원문</label>
    <description>고객이 신고 시 진술한 증상 내용을 가공 없이 원문 그대로 보존해 진단·근본원인 규명의 1차 근거로 사용한다.</description>
    <inlineHelpText>고객이 말한 증상을 요약하지 말고 진술한 표현 그대로 입력하세요.</inlineHelpText>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>