force-app/main/default/objects/Case/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>고객사 요청 접수부터 RCA·예방·지식화까지 6단계 진행률. 워크벤치 상단 진행률 바(c-ot-case-path)의 데이터 소스. 값 앞의 숫자는 순서 보존용이며 라벨은 한글로 노출된다. WO Completed 시 자동으로 "4 수리·복구"까지 진행되지만 다운그레이드는 하지 않는다.</description>
    <inlineHelpText>고객사 케이스의 진행 단계입니다. WorkOrder가 완료되면 자동으로 "4 수리·복구"로 진행됩니다.</inlineHelpText>
    <label>진행 단계</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 접수</fullName>
                <default>true</default>
                <label>0 접수</label>
            </value>
            <value>
                <fullName>1 진단·브리핑</fullName>
            </value>
            <value>
                <fullName>2 담당자 배정</fullName>
            </value>
            <value>
                <fullName>3 현장 출동</fullName>
            </value>
            <value>
                <fullName>4 수리·복구</fullName>
            </value>
            <value>
                <fullName>5 RCA·예방·지식</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>