force-app/main/default/objects/Case/fields/Symptom_Category__c.field-meta.xml
<CustomField>
    <fullName>Symptom_Category__c</fullName>
    <label>증상 분류</label>
    <description>고객이 신고한 장애의 증상 유형을 표준 분류로 기록해 진단·유사 사례 검색·재발 판정의 기준으로 사용한다.</description>
    <inlineHelpText>신고된 장애의 주된 증상을 가장 가까운 항목으로 선택하세요. 해당 항목이 없으면 기타를 선택합니다.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>유량저하</fullName>
            </value>
            <value>
                <fullName>누수</fullName>
            </value>
            <value>
                <fullName>소음</fullName>
            </value>
            <value>
                <fullName>제어이상</fullName>
            </value>
            <value>
                <fullName>전원</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>