force-app/main/default/objects/Case/fields/Warranty_Decision__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Decision__c</fullName>
    <label>보증 판정</label>
    <description>Case 접수 시점에 자동 판정된 보증 적용 여부. Asset 미지정 접수는 판정보류로 두고 Asset 연결 시 최초 1회 판정한다. 수식이 아닌 실필드로 접수 시점에 스탬프한다.</description>
    <inlineHelpText>접수 시점 보증 범위 자동 판정 결과입니다. Asset이 없으면 판정보류로 표시됩니다.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>적용</fullName>
            </value>
            <value>
                <fullName>미적용</fullName>
            </value>
            <value>
                <fullName>판정보류</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>