force-app/main/default/objects/Case/listViews/All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>전체 오픈 케이스</label>
</ListView>