force-app/main/default/objects/Case/listViews/My_Open_High.listView-meta.xml
<ListView>
    <fullName>My_Open_High</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>내 High 케이스</label>
</ListView>