force-app/main/default/objects/Case/listViews/OT_Service_Agent_Fallback_Queue_Case.listView-meta.xml
<ListView>
    <fullName>OT_Service_Agent_Fallback_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>OT Service Agent Fallback Queue</label>
    <queue>OT_Service_Agent_Fallback_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>